2001-04-05  Tom Tromey  <tromey@redhat.com>

	* libtool-version: Updated current.

2001-04-04  Andreas Jaeger  <aj@suse.de>

	* gcj/Makefile.am (AUTOMAKE_OPTIONS): Remove no-installinfo.
	* gcj/Makefile.in: Rebuilt.
	* Makefile.am (AUTOMAKE_OPTIONS): Remove no-installinfo.
	* Makefile.in: Rebuilt.
	* testsuite/Makefile.am (AUTOMAKE_OPTIONS): Remove no-installinfo.
	* testsuite/Makefile.in: Rebuild.
	* include/Makefile.am (AUTOMAKE_OPTIONS): Remove no-installinfo.
	* include/Makefile.in: Rebuild.

2001-04-02 Zack Weinberg <zackw@stanford.edu>

	* testsuite/lib/libjava.exp: Correct typo: 'output from source
	compiled test', not 'execution from source compiled test'.
	Use UNTESTED, not XFAIL, for tests which are not run because
	they depend on a previous test which failed.

2001-04-02  Richard Henderson  <rth@redhat.com>

	* configure.in (GCC_UNWIND_INCLUDE): Assume we're built within
	the same tree as gcc.
	* configure: Rebuilt.

	* exception.cc (_Jv_Throw): Clarify commentary.

2001-04-02  Marcus G. Daniels  <mgd@swarm.org>

	* jni.cc (wrap_value<jclass>): New specialization.

2001-04-02  Tom Tromey  <tromey@redhat.com>

	* java/io/PrintStream.java (out): Removed field.  Fixes PR
	java/2449.
	(write): Call flush, not out.flush, per spec.
	(close): Flush output stream, per spec.  Handle
	InterruptedIOException.
	(checkError): Likewise.
	(flush, print, write): Handle InterruptedIOException per spec.
	(PrintStream): Don't create BufferedOutputStream.
	(work_bytes): New field.
	(writeChars): Use work_bytes.  Don't assume `out' is a
	BufferedOutputStream.

2001-04-02  Torsten Rueger  <torsten.rueger@firsthop.com>

	* java/text/MessageFormat.java (setLocale): Added missing `else'.
	For PR libgcj/2429.

2001-03-30  Tom Tromey  <tromey@redhat.com>

	* jni.cc (add_char): Correctly encode non-ascii characters.
	(add_char): Define even when INTERPRETER not defined.
	(mangled_name): Likewise.
	(_Jv_GetJNIEnvNewFrame): Likewise.
	(_Jv_LookupJNIMethod): Likewise.
